# agl_be_launcher

./: .gitignore  CMakeLists.txt  README.md
app/: agl_surface_switcher.qml  agl_surface_switcher.qrc  app.pro  main.cpp
package/: config.xml  package.pro
src/: AglBeLauncher.cpp  AglBeLauncher.hpp  CMakeLists.txt  SurfaceSwitcher.cpp  SurfaceSwitcher.hpp  WlEglSurface.cpp  WlEglSurface.hpp  main.cpp
