cmake_minimum_required(VERSION 3.0)

set(PROJECT_NAME "agl_be_launcher")

project(${PROJECT_NAME})

################################################################################
# Options
################################################################################
OPTION(WITH_WGT "create AGL widget" OFF)

message(STATUS)
message(STATUS "${PROJECT_NAME} Configuration:")
message(STATUS "CMAKE_BUILD_TYPE              = ${CMAKE_BUILD_TYPE}")
message(STATUS "CMAKE_INSTALL_PREFIX          = ${CMAKE_INSTALL_PREFIX}")
message(STATUS)
message(STATUS "WITH_WGT                      = ${WITH_WGT}")
message(STATUS)
message(STATUS "XENBE_INCLUDE_PATH            = ${XENBE_INCLUDE_PATH}")
message(STATUS)

################################################################################
# Compiler flags
################################################################################

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -Wall -Wno-return-local-addr")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")

################################################################################
# Definitions
################################################################################

################################################################################
# Includes
################################################################################

include_directories(
	${XENBE_INCLUDE_PATH}
)

################################################################################
# Link directories
################################################################################

################################################################################
# Sources
################################################################################

add_subdirectory(src)

################################################################################
# Versioning
################################################################################

################################################################################
# Docs
################################################################################
